fixed task planner, added overflow-y: hidden to html so only body is scrollable not nav, other minor refactorings

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -71,6 +71,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html{
+  overflow-y: hidden!important;
+}
 @media (max-width: 768px) {
   html {
     font-size: 14px !important; /* Mobile base */
